# CSCAging_study_Run2

./: README.md
Src/: AnalysisGasGain.cxx  AnalysisGasGain.h  AnalysisGasGain_cxx.d  AnalysisGasGain_cxx_ACLiC_dict_rdict.pcm  CMakeLists.txt  ChargeORIGandInstL.C  ChargeORIGandInstL.h  HistMan.cxx  HistMan.h  HistMan_cxx.d  HistMan_cxx_ACLiC_dict_rdict.pcm  IntegrateLumi_2016.h  IntegrateLumi_2017.h  IntegrateLumi_2018.h  IntegrateLumi_2022.h  LinkDef.h  Lumi_2017_recorded.h  ProduceHistosPerChannel.C  ProduceHistosPerChannel.h  ProduceHistosPerChannel_C.d  ProduceHistosPerChannel_C_ACLiC_dict.cxx_tmp_9500  ProduceHistosPerChannel_C_ACLiC_dict_rdict.pcm  Readme.md  badchannel.h  build_analysisgasgain.C  build_histman.C  correct_program.C  gas_gain_analysis_plus_minus.C  gas_gain_analysis_plus_minus.h  main.C  me11.C  me11.h  nonme11_first.C  nonme11_first.h  nonme11_second.C  nonme11_second.h  pressure_dependence_removal.C  pressure_dependence_removal.h  pressurecsc.h  pressurecsc_2016.h  (+3 more)
Work/: 2017_processing.py  2022B_script_ntuple.py  2022C_2_script_ntuple.py  2022C_script_ntuple.py  2022D_2_script_ntuple.py  2022D_2_second_script_ntuple.py  2022D_3_script_ntuple.py  2022D_script_ntuple.py  2022E_script_ntuple.py  2022E_second_script_ntuple.py  2022E_third_script_ntuple.py  2022F_2_script_ntuple.py  2022F_script_ntuple.py  2022F_second_script_ntuple.py  2022G_script_ntuple.py  SingleMuReco_2016B_list.txt  SingleMuReco_2016C_list.txt  SingleMuReco_2016D_list.txt  SingleMuReco_2016E_list.txt  (+37 more)
individual_lumi_check/: CMakeLists.txt  TreeReader.C  TreeReader.h  main.C
(+1471 files in other folders)
